[package]
name = "simuwaerm"
version = "0.2.1"
description = "A simple heat simulation for the terminal."
repository = "https://github.com/file-acomplaint/kyun"
license = "MIT"
authors = ["fi-le <info@fi-le.net>"]
keywords = ["cli", "simulation", "recreational"]
categories = ["command-line-utilities", "simulation"]
edition = "2021"

[dependencies]
crossterm = "0.24.0"

[profile.release]
opt-level = "s"
